[package]
name = "micro-blog-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = "0.4.31"
derive_more = "0.99.18"
dotenv = "0.15.0"
env_logger = "0.11.5"
jsonwebtoken = "9.2.0"
log = "0.4.22"
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
